--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -26,6 +26,7 @@
 {% block javascript %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
   <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
+  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.django.csrf.js"> </script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="{{MEDIA_URL}}js/contrib/jquery.js"%3E%3C/script%3E'))</script>
   <script src="{{MEDIA_URL}}js/plugins.js"></script>
   <script src="{{MEDIA_URL}}js/script.js"></script>
